# pcl_learning

./: .gitignore  CMakeLists.txt  README.md
0-using_pcl_in_your_own_project/: CMakeLists.txt
0-using_pcl_in_your_own_project/src/: pcd_write.cpp
1-Using_a_matrix_to_transform_a_point_cloud/: CMakeLists.txt
1-Using_a_matrix_to_transform_a_point_cloud/src/: matrix_transform.cpp
10-PCLVisualizer/: CMakeLists.txt
10-PCLVisualizer/src/: pcl_visualizer_demo.cpp  vis_normal_2d.cpp  vis_normal_cloud.cpp
11-Filtering_a_PointCloud_using_a_PassThrough_filter/: CMakeLists.txt
11-Filtering_a_PointCloud_using_a_PassThrough_filter/src/: passthrough.cpp
12-Downsampling_a_PointCloud_using_a_VoxelGrid_filter/: CMakeLists.txt  table_scene_lms400_downsampled.pcd
12-Downsampling_a_PointCloud_using_a_VoxelGrid_filter/src/: voxel_grid.cpp
13-Removing_outliers_using_a_StatisticalOutlierRemoval_filter/: CMakeLists.txt  readme.txt  table_scene_lms400_outliers.pcd
13-Removing_outliers_using_a_StatisticalOutlierRemoval_filter/src/: statistical_removal.cpp
14-Projecting_points_using_a_parametric_model/: CMakeLists.txt
14-Projecting_points_using_a_parametric_model/src/: parametric_mode.cpp  project_inliers.cpp
15-Extracting_indices_from_a_PointCloud/: CMakeLists.txt  table_scene_lms400_plane_0.pcd  table_scene_lms400_plane_1.pcd  table_scene_lms400_plane_outliers.pcd
15-Extracting_indices_from_a_PointCloud/src/: extract_indices.cpp  pcl_line_seg.cpp
16-Plane_model_segmentation/: CMakeLists.txt  CMakeLists.txt.autosave
16-Plane_model_segmentation/src/: line_circle_seg.cpp  planar_sementation.cpp
17-Removing_outliers_using_a_Conditional_or_RadiusOutlier_removal/: CMakeLists.txt
17-Removing_outliers_using_a_Conditional_or_RadiusOutlier_removal/src/: remove_outliers.cpp
18-PCLPlotter/: CMakeLists.txt
18-PCLPlotter/src/: pcl_plotter_demo.cpp  pcl_simple_plotter.cpp  rail_std_plot.cpp
19-Create_a_PCL_visualizer_in_Qt_with_cmake/: CMakeLists.txt  pclviewer.ui
19-Create_a_PCL_visualizer_in_Qt_with_cmake/include/: pclviewer.h
19-Create_a_PCL_visualizer_in_Qt_with_cmake/src/: main.cpp  pclviewer.cpp
2-Reading_Point_Cloud_data/: CMakeLists.txt
2-Reading_Point_Cloud_data/src/: pcd_read.cpp
20-Create_a_PCL_visualizer_in_Qt_to_colorize_clouds/: CMakeLists.txt
20-Create_a_PCL_visualizer_in_Qt_to_colorize_clouds/src/: main.cpp  pclviewer.cpp
21-Cylinder_model_segmentation/: CMakeLists.txt  table_scene_mug_stereo_textured_cylinder.pcd  table_scene_mug_stereo_textured_plane.pcd
21-Cylinder_model_segmentation/src/: cylinder_model_segmentation.cpp
21-Iterative_closest_point/: CMakeLists.txt  cpd_test.cpp  icp_curvature.cpp  icp_curvature_01.cpp  icp_monkey.cpp  icp_normal.cpp  iterative_closest_point.cpp  transformation_estimation_2d.cpp
21-Iterative_closest_point/normal_estimate2d/: Normal2dEstimation.cpp  Normal2dEstimation.h  PCA2D.cpp
22-How_to_use_Random_Sample_Consensus_model/: CMakeLists.txt
22-How_to_use_Random_Sample_Consensus_model/src/: random_sample_consensus.cpp
22-Robust_pose_estimatio_of_rigid_objects/: CMakeLists.txt  alignment_prerejective.cpp
23-use_Normal_Distributions_Transform/: CMakeLists.txt  normal_distributions_transform.cpp
24-Normal_Estimation_Using_Integral_Images/: CMakeLists.txt  normal_estimation_using_integral_images.cpp
25-How_to_incrementally_register_pairs_of_clouds/: CMakeLists.txt  pairwise_incremental_registration.cpp
3-Writing_Point_Cloud_data/: CMakeLists.txt
3-Writing_Point_Cloud_data/src/: pcd_write.cpp
4-Concatenate_the_points_of_two_Point_Clouds/: CMakeLists.txt
4-Concatenate_the_points_of_two_Point_Clouds/src/: concatenate_clouds.cpp
5-The_OpenNI_Grabber_Framework_in_PCL/: CMakeLists.txt
5-The_OpenNI_Grabber_Framework_in_PCL/src/: openni_grabber_xyzrgb.cpp  openni_viewer_simple.cpp
6-extract_NARF_keypoint_from_a_range_image/: CMakeLists.txt
6-extract_NARF_keypoint_from_a_range_image/src/: narf_keypoint_extraction.cpp
7-How_to_use_a_KdTree_to_search/: CMakeLists.txt
7-How_to_use_a_KdTree_to_search/src/: kdtree_search.cpp
8-octree_Point_Cloud_Compression/: CMakeLists.txt
8-octree_Point_Cloud_Compression/src/: point_cloud_compression.cpp
9-The_CloudViewer/: CMakeLists.txt
9-The_CloudViewer/src/: cloud_viewer.cpp
build-12-Downsampling_a_PointCloud_using_a_VoxelGrid_filter-Desktop_Qt_5_6_2_GCC_64bit-Default/: CMakeCache.txt  Makefile  cmake_install.cmake  voxel_grid.cbp
